Fixing spacing between footer band image and content

--- a/styles/index.css
+++ b/styles/index.css
@@ -262,7 +262,7 @@ p {
 }
 
 .field {
-    margin-bottom: 0.5rem;
+    margin-bottom: 1.5rem;
 }
 
 .field__control {
@@ -596,6 +596,10 @@ p {
         width: 100%;
     }
 
+    .field {
+        margin-bottom: 0.5rem;
+    }
+
     .privacy {
         margin: 1rem 0 1.5rem;
     }
@@ -614,6 +618,16 @@ p {
         display: none;
     }
 
+    .info {
+        min-height: auto;
+    }
+
+    .band {
+        margin-top: calc(
+            (var(--band-height) * -0.25)
+            - ((100vw - 834px) * 0.18)
+        );
+    }
 
     .logo--jacksons {
         width: min(100%, 1210px);
